clr-k8s-examples/tests/deploy-svc-ing/test-deploy-kata-qemu.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: php-apache-kata-qemu
  name: php-apache-kata-qemu
spec:
  replicas: 1
  selector:
    matchLabels:
      run: php-apache-kata-qemu
  template:
    metadata:
      labels:
        run: php-apache-kata-qemu
    spec:
      runtimeClassName: kata-qemu
      containers:
      - image: k8s.gcr.io/hpa-example
        imagePullPolicy: Always
        name: php-apache
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 200m
      restartPolicy: Always
---
apiVersion: v1 
kind: Service
metadata:
  name: php-apache-kata-qemu
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: php-apache-kata-qemu
  sessionAffinity: None
  type: ClusterIP
