clr-k8s-examples/tests/deploy-svc-ing/test-ingress-kata.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-apache-kata
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - http:
      paths:
      - path: /php-apache-kata
        backend:
          serviceName: php-apache-kata
          servicePort: 80
